--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 		"generate": "bun run src/index.ts",
 		"prepare": "husky"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"zod": "^4.3.6"
+	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.12",
 		"@types/bun": "^1.3.6",
