--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -17,5 +17,5 @@ jobs:
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           git add -A
-          git diff --quiet && git diff --staged --quiet || git commit -m "·"
+          git diff --quiet && git diff --staged --quiet || git commit -m "./generate > README.md"
           git push
