--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -14,14 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-
+      - uses: Swatinem/rust-cache@v2
       - run: cargo run --release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
